force-app/main/default/objects/Booking__c/fields/Booking_Form_Generated__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Form Generated</label>
    <type>Checkbox</type>
</CustomField>