force-app/main/default/objects/Booking__c/fields/Booking_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Invoice_Date__c</fullName>
    <label>Booking Invoice Date</label>
    <type>Date</type>
</CustomField>