force-app/main/default/objects/Booking__c/fields/Booking_No__c.field-meta.xml
<CustomField>
    <fullName>Booking_No__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Booking No</label>
    <type>AutoNumber</type>
</CustomField>