force-app/main/default/objects/Booking__c/fields/Landlord_Comission_received__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Comission_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landlord Comission received</label>
    <type>Checkbox</type>
</CustomField>