force-app/main/default/objects/Booking__c/fields/Landlord_Comminssion__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Comminssion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Comminssion</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking3</relationshipName>
    <type>Lookup</type>
</CustomField>