force-app/main/default/objects/Booking__c/fields/Landlord_name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Landlord name</relationshipLabel>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>