force-app/main/default/objects/Booking__c/fields/reminder__c.field-meta.xml
<CustomField>
    <fullName>reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reminder</label>
    <type>Checkbox</type>
</CustomField>