force-app/main/default/objects/Booking__c/fields/Reminder_Week__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Week__c</fullName>
    <formula>IF(
TODAY() - Booking_Invoice_Date__c &lt;= 7,
&quot;First Week&quot;,
IF(
TODAY() - Booking_Invoice_Date__c &lt;= 14,
&quot;Second Week&quot;,
IF(
TODAY() - Booking_Invoice_Date__c &lt;= 21,
&quot;Third Week&quot;,
IF(
TODAY() - Booking_Invoice_Date__c &lt;= 28,
&quot;Fourth Week&quot;,
&quot;Beyond Fourth Week&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Week</label>
    <type>Text</type>
</CustomField>