force-app/main/default/objects/Booking__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Registration</fullName>
                <isActive>false</isActive>
                <label>Registration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>