force-app/main/default/objects/Booking__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking (Tenant)</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>