force-app/main/default/objects/Booking__c/fields/Tenant_Commission_Recieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Commission_Recieved_Amount__c</fullName>
    <label>Tenant Commission Recieved Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>