force-app/main/default/objects/Booking__c/fields/Tenent_comission_received__c.field-meta.xml
<CustomField>
    <fullName>Tenent_comission_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenent comission received</label>
    <type>Checkbox</type>
</CustomField>