force-app/main/default/objects/Booking__c/fields/Unit_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Bundle</label>
    <referenceTo>Unit_Bundle__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>